BuildingBlocks/ServiceInvocation/k8s/deployment-app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  namespace: dapr-playground
spec:
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "app2"
        dapr.io/app-port: "80"
        dapr.io/log-as-json: "true"
    spec:
      containers:
        - name: app2
          image: nunofilipecosta/app2:local
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app2-service
  namespace: dapr-playground
spec:
  type: ClusterIP
  selector:
    app: app2
  ports:
    - port: 80
      targetPort: 80
