BuildingBlocks/ServiceInvocation/k8s/service-sidecar.yaml
apiVersion: v1
kind: Service
metadata:
  name: sidecar-service
  namespace: dapr-playground
  labels:
    app: app1
spec:
  type: ClusterIP
  selector:
    app: app1
  ports:
    - port: 80
      targetPort: 3500
      protocol: TCP
