BuildingBlocks/ServiceInvocation/k8s/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-controller
  namespace: dapr-playground
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - hello-world.info
      secretName: tls-secret
  rules:
    - host: hello-world.info
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: ingress-nginx-dapr
                port:
                  number: 80
