BuildingBlocks/ServiceInvocation/k8s/ingress-sidecar.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-sidecar
  namespace: dapr-playground
  labels:
    name: app
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: "kubernetes.docker.internal"
      http:
        paths:
          - pathType: Prefix
            path: "/sidecar-service(/|$)(.*)"
            backend:
              service:
                name: sidecar-service
                port:
                  number: 80
